# desktop

./: .async-rust-lsp.toml  .envrc  .gitattributes  .gitignore  .mcp.json  .voice-subs  AGENTS.md  Cargo.toml  HANDOFF.md  PLAN.md  PR_602_REVIEW.md  README.md  RELEASING.md  TEST_COVERAGE_ANALYSIS.md  Untitled-Clone.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitlednmpy.ipynb  active.ipynb  ae083095-868f-4fe1-b9e3-6ed18b868663.ipynb  anil.ipynb  biome.json  blobstore.ipynb  canvas.ipynb  chatting.ipynb  cliff.toml  docker-compose.yml  example.ipynb  fancytest.py  firsttry.ipynb  flake.nix  fluid.py  forzed.py  generated-4a7d4d478282.ipynb  goodmorning.ipynb  junk.ipynb  mine.ipynb  nteract-stable-v1.4.1-stable.202603052018-bug-report.md  ok.ipynb  package-lock.json  (+20 more)
crates/kernel-env/: Cargo.toml
crates/kernel-env/src/: conda.rs  gc.rs  launcher.rs  lib.rs  lock.rs  pixi.rs  pixi_api_integration.rs  progress.rs  repodata.rs  uv.rs  warmup.rs
crates/kernel-env/tests/: launcher_e2e.rs
crates/kernel-launch/: Cargo.toml
crates/kernel-launch/src/: lib.rs  tools.rs
crates/mcp-supervisor/: Cargo.toml
crates/mcp-supervisor/src/: main.rs
crates/mcpb-runt/: Cargo.toml
crates/mcpb-runt/src/: main.rs
crates/notebook/: Cargo.toml  build.rs  tauri.conf.json
crates/notebook-doc/: Cargo.toml
crates/notebook-doc/src/: diagnostics.rs  diff.rs  frame_types.rs  lib.rs  metadata.rs  mime.rs  pep723.rs  pool_state.rs  presence.rs  required_plugins.rs  runtime_state.rs
crates/notebook-doc/tests/: generate_fixtures.rs
crates/notebook-persistence/: Cargo.toml
crates/notebook-persistence/src/: error.rs  from_ipynb.rs  lib.rs  to_ipynb.rs
crates/notebook-protocol/: Cargo.toml
crates/notebook-protocol/src/: connection.rs  lib.rs  protocol.rs  typescript.rs
crates/notebook-sync/: Cargo.toml
crates/notebook-sync/src/: broadcast.rs  connect.rs  error.rs  execution_wait.rs  handle.rs  lib.rs  presence.rs  relay.rs  relay_task.rs  shared.rs  snapshot.rs  status.rs  sync_task.rs  tests.rs
crates/notebook/binaries/: .gitignore
crates/notebook/capabilities/: default.json  feedback.json  onboarding.json  settings.json  upgrade.json
crates/notebook/nsis/: bootstrap.nsh  validate-bootstrap.nsi
crates/notebook/src/: cli_install.rs  conda_env.rs  deno_env.rs  environment_yml.rs  format.rs  issue_report.rs  lib.rs  main.rs  mcpb_install.rs  menu.rs  notebook_state.rs  pixi.rs  project_file.rs  pyproject.rs  session.rs  settings.rs  shell_env.rs  typosquat.rs  uv_env.rs
crates/notebook/tests/: env_fallback.rs
crates/nteract-predicate/: Cargo.toml
crates/nteract-predicate/src/: arrow_utils.rs  filter.rs  lib.rs  parquet_summary.rs  store.rs  summary.rs  utils.rs
crates/repr-llm/: Cargo.toml
crates/repr-llm/src/: geojson.rs  json.rs  lib.rs  parquet.rs  plotly.rs  stats.rs  vega.rs  vegalite.rs
crates/runt/: Cargo.toml  build.rs
crates/runt-mcp/: Cargo.toml  build.rs
crates/runt-mcp-proxy/: Cargo.toml  tool-cache.json
crates/runt-mcp-proxy/src/: child.rs  circuit_breaker.rs  lib.rs  proxy.rs  session.rs  tools.rs  version.rs
crates/runt-mcp/assets/: .gitignore
crates/runt-mcp/src/: daemon_watch.rs  editing.rs  execution.rs  formatting.rs  health.rs  lib.rs  presence.rs  project_file.rs  resources.rs  session.rs  structured.rs
crates/runt-proxy/: Cargo.toml
crates/runt-proxy/src/: main.rs
crates/runt-store/: Cargo.toml
crates/runt-store/benches/: trust_allowlist.rs
crates/runt-store/src/: lib.rs  paths.rs  trust_allowlist.rs
crates/runt-store/tests/: trust_allowlist.rs
crates/runt-workspace/: Cargo.toml
crates/runt-workspace/src/: lib.rs  recent.rs
crates/runt/src/: kernel_client.rs  main.rs
crates/runt/tests/: cli.hone
crates/runtime-doc/: Cargo.toml
crates/runtime-doc/src/: doc.rs  error.rs  handle.rs  json_helpers.rs  lib.rs  types.rs
crates/runtimed-client/: Cargo.toml  build.rs
crates/runtimed-client/src/: client.rs  daemon_connection.rs  daemon_paths.rs  execution_store.rs  lib.rs  output_resolver.rs  protocol.rs  resolved_output.rs  runtime.rs  service.rs  settings_doc.rs  settings_rpc_client.rs  singleton.rs  sync_client.rs  telemetry.rs
crates/runtimed-py/: Cargo.toml
crates/runtimed-py/src/: async_client.rs  async_session.rs  client.rs  daemon_paths.rs  error.rs  event_stream.rs  execution.rs  lib.rs  output.rs  output_resolver.rs  session.rs  session_core.rs  subscription.rs
crates/runtimed-wasm/: Cargo.toml
crates/runtimed-wasm/src/: lib.rs  notebook_doc.rs
crates/runtimed-wasm/tests/: cross_impl_test.ts  deno_smoke_test.ts  splice_source_test.ts
crates/sift-wasm/: Cargo.toml
crates/sift-wasm/pkg/: package.json  sift_wasm.d.ts  sift_wasm.js  sift_wasm_bg.wasm  sift_wasm_bg.wasm.d.ts
crates/sift-wasm/src/: lib.rs  store.rs  writer.rs
crates/sift-wasm/tests/: writer_ipc.rs  writer_sqlite.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: bump.rs  main.rs
project-based/: pyproject.toml
python/: README.md  example.ipynb  pyproject.toml
python/dx/: README.md  pyproject.toml
python/dx/tests/: conftest.py  test_comm.py  test_dx_integration.py  test_env.py  test_format.py  test_install.py  test_refs.py  test_summary.py  test_summary_unit.py
python/gremlin/: README.md  pyproject.toml
python/imo/: pyproject.toml
python/imo/tests/: test_renderers.py
python/notebook-tui/: pyproject.toml
python/nteract/: CHANGELOG.md  README.md  pyproject.toml
python/nteract-kernel-launcher/: README.md  nteract_kernel_launcher.py  pyproject.toml
python/nteract-kernel-launcher/nteract_kernel_launcher/: __init__.py  __main__.py  _bootstrap.py  _buffer_hook.py  _env.py  _format.py  _refs.py  _traceback.py  app.py
python/nteract-kernel-launcher/tests/: test_bootstrap.py  test_traceback.py
python/nteract/docs/: editing-api.md
python/nteract/tests/: test_editing.py  test_mcp_integration.py  test_smoke.py
python/prewarm/: README.md  pyproject.toml
python/prewarm/tests/: test_prewarm.py
python/runtimed/: .gitignore  README.md  pyproject.toml
python/safari-timeline/: .gitignore  README.md  pyproject.toml
(+972 files in other folders)
