[workspace]
members = [
    "crates/runt",
    "crates/runt-trust",
    "crates/runt-workspace",
    "crates/kernel-launch",
    "crates/kernel-env",
    "crates/notebook",
    "crates/notebook-doc",
    "crates/notebook-protocol",
    "crates/notebook-sync",
    "crates/xtask",
    "crates/runtimed",
    "crates/runtimed-client",
    "crates/runtimed-py",
    "crates/runtimed-wasm",
    "crates/mcp-supervisor",
    "crates/runt-mcp",
    "crates/repr-llm",
]
default-members = ["crates/notebook"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/nteract/desktop"

[workspace.dependencies]
anyhow = "1"
loro_fractional_index = "=1.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
futures = "0.3"
bytes = "1"
base64 = "0.22"
tokio = { version = "1.36.0", features = ["full"] }
runtimelib = { version = "1.5.0", default-features = false }
jupyter-protocol = "1.4.0"
thiserror = "2"
schemars = "1"
notify = "8"
notify-debouncer-mini = "0.7"
ts-rs = { version = "12", features = ["serde-compat"] }
jiter = { version = "0.13", default-features = false, features = ["num-bigint"] }

[workspace.lints.rust]
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Prevent panics in user-facing code - crashes are terrible UX.
# CI runs `clippy -- -D warnings` so these become errors in CI.
# Use #[allow(clippy::unwrap_used)] with a comment explaining why it's safe.
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
opt-level = 'z'
strip = true
lto = true
codegen-units = 1
panic = "abort"
