[project]
name = "nteract-workspace"
version = "0.0.0"
description = "Development workspace for nteract Python packages"
requires-python = ">=3.10"
dependencies = [
    "nteract",
    "gremlin ; sys_platform == 'darwin'",
    "dx",
    "nteract-kernel-launcher",
    "pandas",
    "polars",
    "pyarrow>=14",
    "numpy>=2.2.6",
    "narwhals>=1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.uv.workspace]
members = ["python/runtimed", "python/nteract", "python/gremlin", "python/prewarm", "python/dx", "python/nteract-kernel-launcher"]

[tool.uv.sources]
runtimed = { workspace = true }
nteract = { workspace = true }
gremlin = { workspace = true }
dx = { workspace = true }
nteract-kernel-launcher = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py310"
include = ["python/**/*.py", "python/**/*.pyi", "scripts/**/*.py"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["runtimed", "nteract", "prewarm"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["SIM105", "SIM117"]

[dependency-groups]
dev = [
    "ruff==0.15.10",
    "ty>=0.0.22",
    "pytest>=8.0",
    "pyzmq>=26.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pydantic-ai>=0.2.0",
    "anywidget>=0.9.21",
    "quak>=0.3.4",
    "polars>=1.39.3",
    "plotly>=6.0",
    "nbformat>=5.0",
    "datasets>=2.0",
]
agents = [
    "claude-agent-sdk>=0.1.0",
]

[tool.ty.environment]
# Workspace members use src-layout; .pth files from editable installs
# aren't visible to static analysis, so we add the source roots explicitly.
extra-paths = [
    "python/runtimed/src",
    "python/nteract/src",
    "python/gremlin/src",
    "python/prewarm/src",
    "python/dx/src",
    # nteract-kernel-launcher is a single top-level .py file, no src/ layout
    "python/nteract-kernel-launcher",
    # Integration tests sit side-by-side under tests/ and share fixtures
    # via direct import (sys.path injection at runtime). Add the dir so
    # ty can resolve the cross-file fixture imports.
    "python/runtimed/tests",
]

[tool.ty.rules]
# .pyi stubs exist for the native PyO3 module (runtimed.pyi) — keep this strict
unresolved-import = "error"

# Tests patch builtins.get_ipython which ty can't model
[[tool.ty.overrides]]
include = ["**/tests/**"]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-assignment = "ignore"

# Gremlin depends on claude-agent-sdk which is macOS-only (not in CI)
[[tool.ty.overrides]]
include = ["python/gremlin/**"]
[tool.ty.overrides.rules]
unresolved-import = "ignore"



[tool.ruff.format]
quote-style = "double"
