[package]
name = "kernel-env"
version = "0.1.0"
edition.workspace = true
description = "Python environment management (UV + Conda) with progress reporting"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
log = "0.4"
dirs = "5"
sha2 = "0.10"
hex = "0.4"

# Tool bootstrapping (get_uv_path)
kernel-launch = { path = "../kernel-launch" }

# Conda environment support via rattler
rattler = { version = "0.39", default-features = false, features = ["native-tls"] }
rattler_cache = { version = "0.6", default-features = false, features = ["native-tls"] }
rattler_conda_types = "0.43"
rattler_repodata_gateway = { version = "0.25", default-features = false, features = ["gateway", "native-tls"] }
rattler_solve = { version = "4.2", features = ["resolvo"] }
rattler_virtual_packages = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
reqwest-middleware = "0.4"

[dev-dependencies]
tempfile = "3"
