[package]
name = "kernel-launch"
version = "0.2.0"
edition.workspace = true
description = "Shared kernel launching and tool bootstrapping for nteract"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
log = "0.4"
dirs = "5"
sha2 = "0.10"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Conda/rattler for tool bootstrapping
rattler = { version = "0.39", default-features = false, features = ["native-tls"] }
rattler_cache = { version = "0.6", default-features = false, features = ["native-tls"] }
rattler_conda_types = "0.43"
rattler_repodata_gateway = { version = "0.25", default-features = false, features = ["gateway", "native-tls"] }
rattler_solve = { version = "4.2", features = ["resolvo"] }
rattler_virtual_packages = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
reqwest-middleware = "0.4"

[dev-dependencies]
tempfile = "3"
