[package]
name = "notebook-protocol"
version = "0.1.0"
edition.workspace = true
description = "Shared wire protocol types for notebook sync (client and server)"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
kernel-env = { path = "../kernel-env", default-features = false }
log = "0.4"
notebook-doc = { path = "../notebook-doc" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
