[package]
name = "notebook-sync"
version = "0.1.0"
edition = "2021"
description = "Automerge-based notebook sync client with direct document access"
repository = "https://github.com/nteract/desktop"
license = "BSD-3-Clause"

[lints]
workspace = true

[dependencies]
automerge = "0.7"
notebook-doc = { path = "../notebook-doc" }
runtimed = { path = "../runtimed", default-features = false }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

uuid = { workspace = true }
log = "0.4"
