[package]
name = "notebook-sync"
version = "0.1.0"
edition.workspace = true
description = "Automerge-based notebook sync client with direct document access"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
automerge = "0.7"
notebook-doc = { path = "../notebook-doc" }
notebook-protocol = { path = "../notebook-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

uuid = { workspace = true }
log = "0.4"

[dev-dependencies]
runtimed = { path = "../runtimed" }
