[package]
name = "notebook"
version = "2.1.3"
edition.workspace = true
description = "Tauri-based notebook UI for Jupyter kernels"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "notebook"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "notebook"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls", "zip"] }
tauri-plugin-window-state = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
runtimed-client = { path = "../runtimed-client" }
notebook-doc = { path = "../notebook-doc" }
notebook-protocol = { path = "../notebook-protocol" }
notebook-sync = { path = "../notebook-sync" }
runt-trust = { path = "../runt-trust" }
runt-workspace = { path = "../runt-workspace" }
nbformat = "1.2.1"
log = "0.4"
tauri-plugin-log = "2"
strsim = "0.11"  # For Levenshtein distance (typosquat detection)
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dirs = "6"
toml = "1"
serde_yaml = "0.9"
pathdiff = "0.2"
pyproject-toml = "0.13"
rfd = "0.17"  # Native dialogs for pre-window error display

# WebDriver plugin for E2E testing
tauri-plugin-webdriver = { version = "0.2", optional = true }

# macOS: app activation for file dialogs when no windows exist
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

# Unix process group support for kernel cleanup
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "process"] }

[features]
default = []
e2e-webdriver = ["tauri-plugin-webdriver"]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
serde_json = { workspace = true }
tauri-build = { version = "2", features = [] }
