[package]
name = "nteract-predicate"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust compute kernels for dataframe/Arrow analysis (summary, filter, histogram)"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
bytes = { workspace = true }
chrono = { version = "0.4", default-features = false }

# Arrow with compute kernels
arrow = { version = "54", default-features = false, features = ["ipc", "ffi"] }
arrow-array = { version = "54", default-features = false }
arrow-buffer = { version = "54", default-features = false }
arrow-cast = { version = "54", default-features = false }
arrow-ord = { version = "54", default-features = false }
arrow-select = { version = "54", default-features = false }
arrow-string = { version = "54", default-features = false }

# Parquet reader
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "flate2", "zstd"] }

[lints]
workspace = true
