[package]
name = "runt-mcp-proxy"
version = "0.1.0"
edition.workspace = true
description = "Resilient MCP proxy for runt mcp — child process supervision, restart-with-retry, session tracking, and version awareness"
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
rmcp = { version = "1.3", features = ["server", "client", "transport-child-process", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
runtimed-client = { path = "../runtimed-client" }
tracing = "0.1"

[lints]
workspace = true
