[package]
name = "runt-mcp"
version = "0.1.0"
edition.workspace = true
description = "Rust-native MCP server for nteract notebook interaction"
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
rmcp = { version = "1.3", features = ["server", "transport-io"] }
runtimed-client = { path = "../runtimed-client" }
notebook-protocol = { path = "../notebook-protocol" }
notebook-sync = { path = "../notebook-sync" }
notebook-doc = { path = "../notebook-doc" }
runt-workspace = { path = "../runt-workspace" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
regex = "1"
fancy-regex = "0.14"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
