[package]
name = "runt-proxy"
version = "0.1.0"
edition.workspace = true
description = "Resilient MCP proxy for runt mcp. Ships as a sidecar in the nteract desktop app and inside the .mcpb Claude Desktop extension."
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "runt-proxy"
path = "src/main.rs"

[dependencies]
runt-mcp-proxy = { path = "../runt-mcp-proxy" }
runt-workspace = { path = "../runt-workspace" }
rmcp = { version = "1.4", features = ["transport-io"] }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"

[lints]
workspace = true
