[package]
name = "runt-store"
version = "0.0.1"
edition.workspace = true
description = "Daemon local data store (spike: libSQL/Turso-backed trust allowlist + room for history/search/completion caches)"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
dashmap = "6"
dirs = "6"
# libsql core only — no replication, no remote, no sync, no TLS. This
# is the embedded SQLite-fork path; the remote/replication features
# would drag in hyper + tower + tonic which belong on a cloud-sync
# future, not the daemon's local store.
libsql = { version = "0.9", default-features = false, features = ["core"] }
parking_lot = "0.12"
serde = { workspace = true }
thiserror = "2"
tokio = { workspace = true, features = ["sync", "fs", "rt"] }
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "trust_allowlist"
harness = false
