[package]
name = "runt-store"
version = "0.0.1"
edition.workspace = true
description = "Daemon local data store (spike: pure-Rust Turso-backed trust allowlist + room for history/search/completion caches)"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
dashmap = "6"
dirs = "6"
# Pure-Rust Turso. No C toolchain for cross-compilation, no FFI.
# `mimalloc` is the default and worth keeping for SQLite-comparable
# alloc perf. `sync` (cloud replication) is intentionally left off.
turso = "0.5"
parking_lot = "0.12"
serde = { workspace = true }
thiserror = "2"
tokio = { workspace = true, features = ["sync", "fs", "rt"] }
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "trust_allowlist"
harness = false
