[package]
name = "runt-workspace"
version = "0.1.0"
edition.workspace = true
description = "Workspace and dev mode utilities for Runt"
repository.workspace = true
license.workspace = true

[dependencies]
dirs = "5"
hex = "0.4"
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
