[package]
name = "runt-workspace"
version = "0.2.0"
edition.workspace = true
description = "Workspace and dev mode utilities for Runt"
repository.workspace = true
license.workspace = true

[dependencies]
dirs = "6"
hex = "0.4"
sha2 = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
