[package]
name = "runt-cli"
version = "2.0.4"
edition.workspace = true
description = "CLI for Jupyter Runtimes — bundled with nteract"
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "runt"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
jupyter-protocol = { workspace = true }
runtimelib = { workspace = true, features = ["tokio-runtime", "aws-lc-rs"] }
runtimed-client = { path = "../runtimed-client" }
notebook-doc = { path = "../notebook-doc", features = ["persistence"] }
runt-workspace = { path = "../runt-workspace" }
runt-mcp = { path = "../runt-mcp" }
kernel-env = { path = "../kernel-env" }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
clap = { version = "4.5.1", features = ["derive", "color"] }
colored = "2"
tokio = { version = "1", features = ["full"] }
petname = "2"
rpassword = "7"
dirs = "5"
tabled = "0.15"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
flate2 = "1"
notify = "8"
tar = "0.4"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
