[package]
name = "runtimed-client"
version = "2.1.0"
edition.workspace = true
description = "Client library for communicating with the runtimed daemon"
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
notebook-protocol = { path = "../notebook-protocol" }
notebook-doc = { path = "../notebook-doc" }
runt-workspace = { path = "../runt-workspace" }
repr-llm = { path = "../repr-llm" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
log = "0.4"
dirs = "5"
base64 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
uuid = { workspace = true }
automerge = "0.7"
schemars = { workspace = true }
ts-rs = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
