[package]
name = "runtimed-py"
version = "2.1.3"
edition = "2021"
description = "Python bindings for runtimed daemon client"
repository.workspace = true
license.workspace = true
publish = false

[lib]
name = "_internals"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
runtimed-client = { path = "../runtimed-client" }
notebook-doc = { path = "../notebook-doc" }
notebook-protocol = { path = "../notebook-protocol" }
kernel-env = { path = "../kernel-env" }
notebook-sync = { path = "../notebook-sync" }
tokio = { version = "1", features = ["full"] }
serde_json = { workspace = true }
uuid = { workspace = true }
log = "0.4"
runt-workspace = { path = "../runt-workspace" }
