[package]
name = "runtimed-wasm"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for runtimed notebook document operations, compiled from the same automerge crate as the daemon"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
automerge = "0.8"
notebook-doc = { path = "../notebook-doc" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
log = "0.4"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints]
workspace = true
