[package]
name = "runtimed-wasm"
version = "0.2.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for runtimed notebook document operations, compiled from the same automerge crate as the daemon"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
automerge = "0.8"
notebook-doc = { path = "../notebook-doc" }
runtime-doc = { path = "../runtime-doc" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
log = "0.4"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# wasm-pack's metadata schema only recognizes `release`, `profiling`,
# `dev`. Custom profiles like our `wasm-release` (workspace-level)
# fall back to the `release` block here. Don't add a `wasm-release`
# section — wasm-pack warns "unknown key" and ignores it.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints]
workspace = true
