[package]
name = "sift-wasm"
version = "0.1.4"
edition.workspace = true
description = "WASM bindings for nteract-predicate — used by @nteract/sift"
repository.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nteract-predicate = { path = "../nteract-predicate" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
bytes = { workspace = true }
chrono = { version = "0.4", default-features = false }
chrono-tz = "0.10"

arrow = { version = "54", default-features = false, features = ["ipc", "ffi"] }
arrow-cast = { version = "54", default-features = false }
arrow-ord = { version = "54", default-features = false }
arrow-select = { version = "54", default-features = false }
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "flate2", "zstd"] }

[dev-dependencies]
serde_json = { workspace = true }
wasm-bindgen-test = "0.3"

# wasm-pack's metadata schema only recognizes `release`, `profiling`,
# `dev`. Custom profiles like our `wasm-release` (workspace-level)
# fall back to the `release` block here. Don't add a `wasm-release`
# section — wasm-pack warns "unknown key" and ignores it.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints]
workspace = true
