[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[features]
# Enables `cargo xtask install-nightly`. Off by default because runtimed-client
# pulls in ~750 transitive crates (automerge, reqwest, tokio…) that make every
# xtask invocation unreasonably slow to compile. The lab can enable this with:
#   cargo xtask --features install-nightly install-nightly
install-nightly = ["dep:runtimed-client"]

[dependencies]
dirs = "6"
runt-workspace = { path = "../runt-workspace" }
runtimed-client = { path = "../runtimed-client", optional = true }
serde_json.workspace = true
