[project]
name = "gremlin"
version = "0.0.0"
description = "Stress-testing agent for nteract notebooks — not published"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Kyle Kelley", email = "rgbkrk@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "runtimed>=2.0.0a0,<3.0",
    "claude-agent-sdk>=0.1.0",
]

[tool.uv.sources]
runtimed = { workspace = true }

[project.scripts]
gremlin = "gremlin.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gremlin"]
