[project]
name = "gremlin"
version = "0.0.0"
description = "Stress-testing agent for nteract notebooks — not published"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Kyle Kelley", email = "rgbkrk@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
gremlin = "gremlin.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gremlin"]
